# k8r

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
k8r/: cli.py
